--- a/build.gradle
+++ b/build.gradle
@@ -7,8 +7,16 @@ sourceCompatibility = 1.8
 
 repositories {
     mavenCentral()
+    maven {
+        url = 'http://repo.spongepowered.org/maven'
+    }
+    maven {
+        url = 'https://jitpack.io'
+    }
 }
 
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
+    compile 'org.spongepowered:spongeapi:7.0.0-SNAPSHOT',
+            'com.github.Daniel12321:NPCs:1.12-SNAPSHOT'
 }
