--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,6 @@ repositories {
 
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
-    compile 'org.spongepowered:spongeapi:7.0.0-SNAPSHOT',
+    compile 'org.spongepowered:spongeapi:7.0.0',
             'com.github.Daniel12321:NPCs:1.12-SNAPSHOT'
 }
