--- a/build.gradle
+++ b/build.gradle
@@ -39,12 +39,11 @@ dependencies {
     shadow 'org.spongepowered:spongeapi:7.0.0-SNAPSHOT'
     shadow 'com.github.Atherys-Horizons:AtherysCore:master-SNAPSHOT'
 
-    compile   'com.fasterxml.jackson.core:jackson-databind:2.9.0'
+    compile 'com.fasterxml.jackson.core:jackson-databind:2.9.0'
 }
 
 shadowJar {
     relocate 'org.bson', 'com.atherys.libs.org.bson'
     relocate 'com.mongodb', 'com.atherys.libs.com.mongodb'
-    relocate 'com.seisw', 'com.atherys.libs.com.seisw'
-    relocate 'math', 'com.atherys.libs.math'
+    relocate 'com.fasterxml', 'com.atherys.libs.com.fasterxml'
 }
