--- a/build.gradle
+++ b/build.gradle
@@ -48,6 +48,7 @@ dependencies {
 }
 
 shadowJar {
+    relocate 'kotlin', 'com.atherys.libs.kotlin'
     relocate 'org.bson', 'com.atherys.libs.org.bson'
     relocate 'com.mongodb', 'com.atherys.libs.com.mongodb'
 }
