--- a/build.gradle
+++ b/build.gradle
@@ -1,20 +1,16 @@
 group 'com.atherys'
 
 buildscript {
-    ext.kotlin_version = '1.2.30'
-
     repositories {
         jcenter()
     }
     dependencies {
         classpath 'com.github.jengelman.gradle.plugins:shadow:2.0.2'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
 }
 
 apply plugin: 'com.github.johnrengelman.shadow'
 apply plugin: 'java'
-apply plugin: 'kotlin'
 
 sourceCompatibility = 1.8
 
@@ -41,7 +37,7 @@ repositories {
 }
 
 dependencies {
-    shadow "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
+    shadow 'org.luaj:luaj-jse:3.0.1'
     shadow 'org.spongepowered:spongeapi:7.0.0-SNAPSHOT'
     shadow 'com.github.Atherys-Horizons:AtherysCore:master-SNAPSHOT'
 }
@@ -49,11 +45,4 @@ dependencies {
 shadowJar {
     relocate 'org.bson', 'com.atherys.libs.org.bson'
     relocate 'com.mongodb', 'com.atherys.libs.com.mongodb'
-}
-
-compileKotlin {
-    kotlinOptions.jvmTarget = '1.8'
-}
-compileTestKotlin {
-    kotlinOptions.jvmTarget = '1.8'
 }
