--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,12 @@ apply plugin: 'java'
 
 sourceCompatibility = 1.8
 
+compileJava.options.encoding = 'UTF-8'
+
+tasks.withType(JavaCompile) {
+    options.encoding = 'UTF-8'
+}
+
 sourceSets {
     main {
         resources {
