--- a/build.gradle
+++ b/build.gradle
@@ -43,9 +43,9 @@ repositories {
 }
 
 dependencies {
-    shadow 'org.luaj:luaj-jse:3.0.1'
     shadow 'org.spongepowered:spongeapi:7.0.0-SNAPSHOT'
     shadow 'com.github.Atherys-Horizons:AtherysCore:master-SNAPSHOT'
+    shadow 'com.github.Atherys-Horizons:AtherysScript:master-SNAPSHOT'
 }
 
 shadowJar {
