--- a/build.gradle
+++ b/build.gradle
@@ -53,7 +53,7 @@ shadowJar {
     relocate 'com.mongodb', 'com.atherys.libs.com.mongodb'
 }
 
-task javadocs(type: Javadoc) {
+javadocs {
     source = sourceSets.main.allJava
     classpath += configurations.shadow
     title = "AtherysQuests"
