Add links to javadoc

--- a/build.gradle
+++ b/build.gradle
@@ -53,9 +53,15 @@ shadowJar {
     relocate 'com.mongodb', 'com.atherys.libs.com.mongodb'
 }
 
-task javadocs(type: Javadoc) {
+javadocs {
     source = sourceSets.main.allJava
     classpath += configurations.shadow
     title = "AtherysQuests"
+    options.links(
+            'http://www.slf4j.org/apidocs/',
+            'https://docs.oracle.com/javase/8/docs/api/',
+            'https://flow.github.io/math/',
+            'http://jd.spongepowered.org/7.1.0/'
+    )
     options.addStringOption('Xdoclint:none', '-quiet')
 }
