--- a/build.gradle
+++ b/build.gradle
@@ -44,8 +44,8 @@ repositories {
 
 dependencies {
     shadow 'org.spongepowered:spongeapi:7.0.0-SNAPSHOT'
-    shadow 'com.github.Atherys-Horizons:AtherysCore:master-SNAPSHOT'
     shadow 'com.github.Atherys-Horizons:AtherysScript:master-SNAPSHOT'
+    shadow 'com.github.Atherys-Horizons:AtherysCore:1.10.4'
 }
 
 shadowJar {
